--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -15,7 +15,7 @@
         android:text="Danh sách của tôi"
         android:textSize="20dp"
         android:textColor="@android:color/white"
-        android:textStyle="bold"
+        android:fontFamily="@font/inter_bold"
         android:layout_marginBottom="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#B0B0B0"
-                android:textStyle="bold"/>
+                android:fontFamily="@font/inter_bold"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -48,7 +48,7 @@
                     android:textSize="16dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"/>
+                    android:fontFamily="@font/inter_bold"/>
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
