--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -47,7 +47,7 @@
             android:text="Phim lẻ"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
+            android:fontFamily="@font/inter_bold"
             app:iconTint="@android:color/white"
             android:textColor="@android:color/white"
             android:textSize="15dp"
@@ -60,7 +60,7 @@
             android:text="Phim bộ"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
+            android:fontFamily="@font/inter_bold"
             app:iconTint="@android:color/white"
             android:textColor="@android:color/white"
             android:textSize="15dp"
@@ -86,7 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
-                android:textStyle="bold"
+                android:fontFamily="@font/inter_bold"
                 android:layout_marginBottom="15dp"
                 android:layout_marginHorizontal="5dp"
                 android:visibility="gone"
