--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -60,7 +60,7 @@
                 android:text="Movie Name"
                 android:textColor="@android:color/white"
                 android:textSize="20dp"
-                android:textStyle="bold"
+                android:fontFamily="@font/inter_bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/MoviebackdropFL" />
 
@@ -125,7 +125,7 @@
                 android:text="Xem Ngay"
                 android:textColor="@android:color/black"
                 android:textSize="16dp"
-                android:textStyle="bold"
+                android:fontFamily="@font/inter_bold"
                 app:backgroundTint="@android:color/white"
                 app:cornerRadius="10dp"
                 app:icon="@drawable/play"
@@ -266,7 +266,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:text="Nội dung tương tự"
-                android:textStyle="bold"
+                android:fontFamily="@font/inter_bold"
                 android:textColor="@android:color/white"
                 android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="parent"
