--- a/app/src/main/res/layout/custom_video_player.xml
+++ b/app/src/main/res/layout/custom_video_player.xml
@@ -34,7 +34,7 @@
             android:gravity="center"
             android:maxLines="2"
             android:text="Movie Name"
-            android:textStyle="bold"
+            android:fontFamily="@font/inter_bold"
             android:textColor="@android:color/white" />
 
         <TextView
