--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -85,6 +85,7 @@
                 android:layout_marginTop="10dp"
                 >
                 <ImageView
+                    android:id="@+id/star_icon"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/star"
                     android:layout_width="wrap_content"
@@ -92,7 +93,7 @@
                     android:contentDescription="TODO"
                     app:tint="#5AD065" />
                 <TextView
-                    android:id="@+id/tvRate"
+                    android:id="@+id/movieRate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="8.8"
